Primeira parte do portifolio

--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <title>LannCreations</title>
-    </head>
-    <body>
-
-        <h1> 
-            <img src="logo.png" alt="Logo da LannCreations" width="1350">
-        </h1>
-        <p>Quem sou eu?</p>
-        <img src="foto.png"  alt="Homem moreno com barba, camisa azul e colares coloridos olhando para a esquerda." width="300">
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LannCreations</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <img src="./img/logo.png" alt="Logo LannCreations">
+    </header>
+    <main>
+        <h1>Bem vindo ao <strong>LannCreations!</strong></h1>
+        <p>Olá! Sou <strong>Lannder Cunha</strong>, desinger gráfico, conhecido por trabalhos com <img src="./img/1726704005_logoprecisavaescrever.webp">, <img src="./img/deu_praia.jpeg">, <img src="./img/popcoffe.jpeg"> e <img src="./img/popcorn.png">. <strong>Tenho 121 bonecas</strong>. Vamos conversar?</p>
+        <a href="https://instagram.com/lanncreations">Instagram </a>
+        <a href="https://api.whatsapp.com/send/?phone=564992839881&text&type=phone_number&app_absent=0">WhatsApp</a>
+        <img src="./img/foto.png"   alt="Homem moreno com barba, camisa azul e colares coloridos olhando para a esquerda.">
+    </main>
+    <footer></footer>
+</body>
 </html>
