--- a/about.html
+++ b/about.html
@@ -10,12 +10,18 @@
     <header class="cabecalho">
         <nav class="cabecalho__menu">
             <a class="cabecalho__menu__link" href="./index.html">Inicio</a>
-            <a class="cabecalho__menu__link" href="./about.html">Sobre mim</a>
-            <img class="cabecalho__menu__logo" src="./img/LannCreationLogo.png" alt="Logo LannCreations">
+            <a class="cabecalho__menu__link" href="./about.html">Projetos</a>
         </nav>
     </header>
     <main>
-
+                <p class="apresentacao__conteudo__texto">Marcas que já trabalhei: </p>
+            <div class="apresentacao__logos">
+                 <img src="./img/CajuLogo.png" alt="Logo Cajueiro">
+                <img src="./img/DeuPraiaLogo.svg" alt="Logo Deu Praia 2024">
+                <img src="./img/PopCoffeeLogo.webp" alt="Pop Coffee Logo">
+                <img src="./img/PopCorn.svg" alt="Logo Pop Corn Gourmet">
+                <img src="./img/PrecisavaEscreverLogo.webp" alt="Logo Precisava Escrever">
+            </div>
     </main>
     <footer class="rodape">
         <p>Desenvolvido por <a class="rodape__texto" href="https://www.instagram.com/mattvieiraa/">Matt Vieira.</a></p>
