--- a/index.html
+++ b/index.html
@@ -11,28 +11,20 @@
     <header class="cabecalho">
         <nav class="cabecalho__menu">
             <a class="cabecalho__menu__link" href="./index.html">Inicio</a>
-            <a class="cabecalho__menu__link" href="./about.html">Sobre mim</a>
-            <img class="cabecalho__menu__logo" src="./img/LannCreationLogo.png" alt="Logo LannCreations">
+            <a class="cabecalho__menu__link" href="./about.html">Projetos</a>
         </nav>
     </header>
     <main class="apresentacao">
-        <section class="apresentacao__informacao">
-            <h1 class="apresentacao__informacao__titulo">Bem vindo ao <strong class="negritoAzul">LannCreations!</strong></h1>
-            <p class="apresentacao__informacao__texto">Olá! Sou Lannder Cunha, desinger gráfico. Algumas marcas que já confiaram no meu trabalho.</p>
-            <div class="apresentacao__logos">
-                 <img src="./img/CajuLogo.png" alt="Logo Cajueiro">
-                <img src="./img/DeuPraiaLogo.svg" alt="Logo Deu Praia 2024">
-                <img src="./img/PopCoffeeLogo.webp" alt="Pop Coffee Logo">
-                <img src="./img/PopCorn.svg" alt="Logo Pop Corn Gourmet">
-                <img src="./img/PrecisavaEscreverLogo.webp" alt="Logo Precisava Escrever">
-            </div>
+        <section class="apresentacao__conteudo">
+            <h1 class="apresentacao__conteudo__titulo">Bem vindo ao <strong class="negritoAzul">LannCreations!</strong></h1>
+            <p class="apresentacao__conteudo__texto">Olá! Eu sou Lannder Cunha, tenho 24 anos e quero te apresentar meu portifólio! Conhecça meus projetos profissionais como identidade visual, diagramções além de algumas ilustrações pessoais.</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
                 <a class="apresentacao__links__links" href="https://instagram.com/lanncreations">Instagram </a>
                 <a class="apresentacao__links__links" href="https://api.whatsapp.com/send/?phone=564992839881&text&type=phone_number&app_absent=0">WhatsApp</a>
             </div>
         </section>
-        <img src="./img/LannderFoto.png"   alt="Homem moreno com barba, camisa azul e colares coloridos olhando para a esquerda.">
+        <img class="apresentacao__imagem" src="./img/LannderFoto.png" alt="Homem moreno com barba, camisa azul e colares coloridos olhando para a esquerda.">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por <a class="rodape__texto" href="https://www.instagram.com/mattvieiraa/">Matt Vieira.</a></p>
